// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoGenerator generateCompleteModels() should render dependencies 1`] = `
"
package some_package

// Members represents a Members model.
type Members struct {
  string
  float64
  bool
}"
`;

exports[`GoGenerator generateCompleteModels() should render dependencies 2`] = `
"
package some_package

// Union represents a Union model.
type Union struct {
  string
  float64
  ModelinaAnyType interface{}
}"
`;

exports[`GoGenerator generateCompleteModels() should render dependencies 3`] = `
"
package some_package

// AdditionalProperties represents a AdditionalProperties model.
type AdditionalProperties struct {
  ModelinaAnyType interface{}
  string
}"
`;

exports[`GoGenerator generateCompleteModels() should render dependencies 4`] = `
"
package some_package
import (  
  \\"time\\"
)
// Address represents a Address model.
type Address struct {
  StreetName *string
  City *string
  State *string
  HouseNumber *float64
  Marriage *bool
  Members *Members
  ArrayType []Union
  OtherModel *OtherModel
  AdditionalProperties map[string]AdditionalProperties
}"
`;

exports[`GoGenerator generateCompleteModels() should render dependencies 5`] = `
"
package some_package
import (  
  \\"time\\"
)
// OtherModel represents a OtherModel model.
type OtherModel struct {
  StreetName *string
  AdditionalProperties map[string]interface{}
}"
`;

exports[`GoGenerator generateCompleteModels() should render models 1`] = `
"
package some_package

// Members represents a Members model.
type Members struct {
  string
  float64
  bool
}"
`;

exports[`GoGenerator generateCompleteModels() should render models 2`] = `
"
package some_package

// Union represents a Union model.
type Union struct {
  string
  float64
  ModelinaAnyType interface{}
}"
`;

exports[`GoGenerator generateCompleteModels() should render models 3`] = `
"
package some_package

// AdditionalProperties represents a AdditionalProperties model.
type AdditionalProperties struct {
  ModelinaAnyType interface{}
  string
}"
`;

exports[`GoGenerator generateCompleteModels() should render models 4`] = `
"
package some_package

// Address represents a Address model.
type Address struct {
  StreetName interface{}
  City *string
  State *string
  HouseNumber *float64
  Marriage *bool
  Members *Members
  ArrayType []Union
  OtherModel *OtherModel
  AdditionalProperties map[string]AdditionalProperties
}"
`;

exports[`GoGenerator generateCompleteModels() should render models 5`] = `
"
package some_package

// OtherModel represents a OtherModel model.
type OtherModel struct {
  StreetName *string
  AdditionalProperties map[string]interface{}
}"
`;

exports[`GoGenerator should render \`enum\` with mixed types 1`] = `
"// Things represents an enum of Things.
type Things uint

const (
  ThingsTexas Things = iota
  ThingsNumber_1
  ThingsReservedNumber_1
  ThingsFalse
  ThingsCurlyleftQuotationTestQuotationColonQuotationTestQuotationCurlyright
)

// Value returns the value of the enum.
func (op Things) Value() any {
	if op >= Things(len(ThingsValues)) {
		return nil
	}
	return ThingsValues[op]
}

var ThingsValues = []any{\\"Texas\\",1,\\"1\\",false,{\\"test\\":\\"test\\"}}
var ValuesToThings = map[any]Things{
  ThingsValues[ThingsTexas]: ThingsTexas,
  ThingsValues[ThingsNumber_1]: ThingsNumber_1,
  ThingsValues[ThingsReservedNumber_1]: ThingsReservedNumber_1,
  ThingsValues[ThingsFalse]: ThingsFalse,
  ThingsValues[ThingsCurlyleftQuotationTestQuotationColonQuotationTestQuotationCurlyright]: ThingsCurlyleftQuotationTestQuotationColonQuotationTestQuotationCurlyright,
}
"
`;

exports[`GoGenerator should render \`struct\` type 1`] = `
"// Members represents a Members model.
type Members struct {
  string
  float64
  bool
}"
`;

exports[`GoGenerator should render \`struct\` type 2`] = `
"// Union represents a Union model.
type Union struct {
  string
  float64
  ModelinaAnyType interface{}
}"
`;

exports[`GoGenerator should render \`struct\` type 3`] = `
"// AdditionalProperties represents a AdditionalProperties model.
type AdditionalProperties struct {
  string
}"
`;

exports[`GoGenerator should render \`struct\` type 4`] = `
"// Address represents a Address model.
type Address struct {
  StreetName *string
  City *string
  State *string
  HouseNumber *float64
  Marriage *bool
  Members *Members
  TupleType []Union
  ArrayType []string
  AdditionalProperties map[string]AdditionalProperties
}"
`;

exports[`GoGenerator should render \`union\` type 1`] = `
"// Members represents a Members model.
type Members struct {
  string
  float64
  bool
}
// Union represents a Union model.
type Union struct {
  string
  float64
  ModelinaAnyType interface{}
}
// LocationAdditionalProperty represents a LocationAdditionalProperty model.
type LocationAdditionalProperty struct {
  LocationAdditionalPropertyOneOf_0
  LocationAdditionalPropertyOneOf_1
}
// AdditionalProperties represents a AdditionalProperties model.
type AdditionalProperties struct {
  string
}
// Address represents a Address model.
type Address struct {
  StreetName *string
  City *string
  State *string
  HouseNumber *float64
  Marriage *bool
  Members *Members
  TupleType []Union
  ArrayType []string
  Location map[string]LocationAdditionalProperty
  AdditionalProperties map[string]AdditionalProperties
}
// LocationAdditionalPropertyOneOf_0 represents a LocationAdditionalPropertyOneOf_0 model.
type LocationAdditionalPropertyOneOf_0 struct {
  Ref *string
  AdditionalProperties map[string]interface{}
}
// LocationAdditionalPropertyOneOf_1 represents a LocationAdditionalPropertyOneOf_1 model.
type LocationAdditionalPropertyOneOf_1 struct {
  Id *string
  AdditionalProperties map[string]interface{}
}"
`;

exports[`GoGenerator should work custom preset for \`enum\` type 1`] = `
"// CustomEnum represents an enum of CustomEnum.
type CustomEnum uint

const (
  test 0
  test 1
  test 2
)

// Value returns the value of the enum.
func (op CustomEnum) Value() any {
	if op >= CustomEnum(len(CustomEnumValues)) {
		return nil
	}
	return CustomEnumValues[op]
}

var CustomEnumValues = []any{\\"Texas\\",\\"Alabama\\",\\"California\\"}
var ValuesToCustomEnum = map[any]CustomEnum{
  CustomEnumValues[CustomEnumTexas]: CustomEnumTexas,
  CustomEnumValues[CustomEnumAlabama]: CustomEnumAlabama,
  CustomEnumValues[CustomEnumCalifornia]: CustomEnumCalifornia,
}
additionalContent"
`;

exports[`GoGenerator should work custom preset for \`struct\` type 1`] = `
"// CustomStruct represents a CustomStruct model.
type CustomStruct struct {
  field Property
  field AdditionalProperties

  additionalContent
}"
`;
